[gd_scene load_steps=6 format=3 uid="uid://1ct8rnkyxlbc"]

[ext_resource type="Script" uid="uid://bfv6bj6haq0yf" path="res://world/Room.gd" id="1_hcqnc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ynhpl"]
size = Vector2(512, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcqnc"]
size = Vector2(512, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m34fb"]
size = Vector2(16, 512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iybvf"]
size = Vector2(16, 512)

[node name="Room" type="Node2D"]
script = ExtResource("1_hcqnc")

[node name="Background" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 512.0
color = Color(0.26666668, 0.26666668, 0.26666668, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="WallTop" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallTop"]
position = Vector2(256, 8)
shape = SubResource("RectangleShape2D_ynhpl")

[node name="WallBottom" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallBottom"]
position = Vector2(256, 504)
shape = SubResource("RectangleShape2D_hcqnc")

[node name="WallLeft" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2(8, 256)
shape = SubResource("RectangleShape2D_m34fb")

[node name="WallRight" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2(504, 256)
shape = SubResource("RectangleShape2D_iybvf")
